@@ -1,3 +1,12 @@
+2011-06-23  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* erc.el (erc-ssl): Made into a synonym for erc-tls, which
+	provides a superset of the same functionality.
+	(erc-open-ssl-stream): Removed.
+	(erc-open-tls-stream): Use `open-network-stream' instead of
+	`open-tls-stream' directly to be able to use the built-in TLS
+	support.
+
 2011-05-28  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* erc-pcomplete.el (erc-pcompletions-at-point): Mark the completion
